4.1
 * Add guardrails for collection items and size (CASSANDRA-17153)
 * Improve guardrails messages (CASSANDRA-17430)
 * Remove all usages of junit.framework and ban them via Checkstyle (CASSANDRA-17316)
 * Add guardrails for read/write consistency levels (CASSANDRA-17188)
 * Add guardrail for SELECT IN terms and their cartesian product (CASSANDRA-17187)
 * remove unused imports in cqlsh.py and cqlshlib (CASSANDRA-17413)
 * deprecate property windows_timer_interval (CASSANDRA-17404)
 * Expose streaming as a vtable (CASSANDRA-17390)
 * Expose all client options via system_views.clients and nodetool clientstats (CASSANDRA-16378)
 * Make startup checks configurable (CASSANDRA-17220)
 * Add guardrail for number of partition keys on IN queries (CASSANDRA-17186)
 * update Python test framework from nose to pytest (CASSANDRA-17293)
 * Fix improper CDC commit log segments deletion in non-blocking mode (CASSANDRA-17233)
 * Add support for string concatenations through the + operator (CASSANDRA-17190)
 * Limit the maximum hints size per host (CASSANDRA-17142)
 * Add a virtual table for exposing batch metrics (CASSANDRA-17225)
 * Flatten guardrails config (CASSANDRA-17353)
 * Instance failed to start up due to NPE in StartupClusterConnectivityChecker (CASSANDRA-17347)
 * add the shorter version of version flag (-v) in cqlsh (CASSANDRA-17236)
 * Make vtables accessible via internode messaging (CASSANDRA-17295)
 * Add support for PEM based key material for SSL (CASSANDRA-17031)
 * Standardize storage configuration parameters' names. Support unit suffixes. (CASSANDRA-15234)
 * Remove support for Windows (CASSANDRA-16956)
 * Runtime-configurable YAML option to prohibit USE statements (CASSANDRA-17318)
 * When streaming sees a ClosedChannelException this triggers the disk failure policy (CASSANDRA-17116)
 * Add a virtual table for exposing prepared statements metrics (CASSANDRA-17224)
 * Remove python 2.x support from cqlsh (CASSANDRA-17242)