@@ -46,6 +46,7 @@ public final class SystemViewsKeyspace extends VirtualKeyspace
                     .add(new CQLMetricsTable(VIRTUAL_VIEWS))
                     .add(new BatchMetricsTable(VIRTUAL_VIEWS))
                     .add(new StreamingVirtualTable(VIRTUAL_VIEWS))
+                    .add(new GossipInfoTable(VIRTUAL_VIEWS))
                     .build());
     }
 }
